# 211_331_Karpov

./: CMakeLists.txt  README.md
data/: encrypt.ps1  transactions_corrupted.json  transactions_corrupted.json.enc  transactions_valid.json  transactions_valid.json.enc
src/: CMakeLists.txt  datagen.cpp  main.cpp  mainwindow.cpp  mainwindow.h
src/crypto/: qaesencryption.h
src/security/: securitymanager.cpp  securitymanager.h
